--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "lodash": "^4.17.21",
     "node-fetch": "^2.7.0",
+    "node-json-db": "^2.2.0",
     "read-excel-file": "^5.6.1",
     "winston": "^3.10.0",
     "winston-daily-rotate-file": "^4.7.1",
