--- a/package.json
+++ b/package.json
@@ -2,20 +2,22 @@
   "name": "zollerhelper",
   "version": "1.0.0",
   "description": "",
+  "type": "module",
   "main": "index.js",
   "bin": {
     "app": "./dist/index.js"
   },
   "scripts": {
-    "build": "tsc --build --clean && tsc && pkg . --targets node18-win-x64",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "rm -rf ./dist/ && tsc && node ./dist/index.js",
-    "dev": "nodemon --watch \"*.ts\" --exec \"ts-node\" ./src/index.ts"
+    "dev": "rm -rf ./dist/ && tsc && node ./dist/index.js",
+    "build": "rm -rf ./dist/ && tsc",
+    "start": "pm2 start ecosystem.config.cjs"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.3.1",
     "lodash": "^4.17.21",
     "node-fetch": "^2.7.0",
     "node-json-db": "^2.2.0",
@@ -32,8 +34,6 @@
     "@typescript-eslint/parser": "^6.6.0",
     "eslint": "^8.49.0",
     "nodemon": "^3.0.1",
-    "pkg": "^5.8.1",
-    "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
   }
 }
