--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "rm -rf ./dist/ && tsc && node ./dist/index.js",
-    "build": "rm -rf ./dist/ && tsc",
+    "dev": "clear && rm -rf ./dist/ && tsc && node ./dist/index.js",
+    "build": "clear && rm -rf ./dist/ && tsc",
     "start": "pm2 start ecosystem.config.cjs"
   },
   "keywords": [],
