--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "dotenv": "^16.3.1",
     "lodash": "^4.17.21",
     "node-fetch": "^2.7.0",
-    "node-json-db": "^2.2.0",
+    "node-watch": "^0.7.4",
     "read-excel-file": "^5.6.1",
     "winston": "^3.10.0",
     "winston-daily-rotate-file": "^4.7.1",
